Login, Auth and Revocation logic added
