# dtos/loginResponse.go
@@ -1,0 +1,5 @@
+package dtos
+
+type LoginResponse struct {
+	AccessToken string `json:"accesstoken"`
+}
