# dtos/registerRequest.go
@@ -1,6 +1,7 @@
 package dtos
 
 type RegisterRequest struct {
-	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
+	Email    string   `json:"email" binding:"required,email"`
+	Password string   `json:"password" binding:"required,max=16"`
+	Roles    []string `json:"roles"`
 }
