# dtos/revokeTokenRequest.go
@@ -1,0 +1,5 @@
+package dtos
+
+type RevokeTokenRequest struct {
+	AccessToken string `json:"accesstoken"`
+}
