# handlers/v1/responses.go
@@ -1,0 +1,9 @@
+package v1
+
+type SuccessResponse struct {
+	Message string `json:"message"`
+}
+
+type ErrorResponse struct {
+	Error string `json:"error"`
+}
